--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "build": "bun run tsc",
+    "start": "bun run dist/index.js",
+    "dev": "bun run src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
