--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/c99rahul/ts-node-express#readme",
   "dependencies": {
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
