--- a/package.json
+++ b/package.json
@@ -21,15 +21,13 @@
   },
   "homepage": "https://github.com/c99rahul/ts-node-express#readme",
   "dependencies": {
+    "@types/bun": "^1.2.22",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "hono": "^4.9.7"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
